# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

notification_cangjie_wrapper_packages_ohos = [
    "//base/notification/notification_cangjie_wrapper/ohos/notification_flags:ohos.notification_flags",
    "//base/notification/notification_cangjie_wrapper/ohos/notification_content:ohos.notification_content",
    "//base/notification/notification_cangjie_wrapper/ohos/notification_request:ohos.notification_request",
    "//base/notification/notification_cangjie_wrapper/ohos/notification_manager:ohos.notification_manager",
    "//base/notification/notification_cangjie_wrapper/ohos/common_event_manager:ohos.common_event_manager",
    "//base/notification/notification_cangjie_wrapper/ohos/value_type:ohos.value_type",
    "//base/notification/notification_cangjie_wrapper/ohos/common_event_subscribe_info:ohos.common_event_subscribe_info",
    "//base/notification/notification_cangjie_wrapper/ohos/common_event_publish_data:ohos.common_event_publish_data",
    "//base/notification/notification_cangjie_wrapper/ohos/common_event_subscriber:ohos.common_event_subscriber",
    "//base/notification/notification_cangjie_wrapper/ohos/common_event_data:ohos.common_event_data"
]

notification_cangjie_wrapper_packages_kit = [
    "//base/notification/notification_cangjie_wrapper/kit/NotificationKit:kit.NotificationKit",
]

copy_ohos_cangjie_sdk_api_lib("copy_sdk_notification_cangjie_libs") {
  ohos_inputs = notification_cangjie_wrapper_packages_ohos
  kit_inputs = notification_cangjie_wrapper_packages_kit
}