# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.common_event_manager") {
  sources = [
    "common_event_manager.cj",
    "common_event_manager_ffi.cj",
    "common_event_subscribe_info.cj",
    "common_event_subscriber.cj",
    "errors.cj",
    "publish_data.cj",
    "support.cj",
    "utils.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "common_event_service:cj_common_event_manager_ffi" ]

  subsystem_name = "notification"
  part_name = "notification_cangjie_wrapper"
  lib_name = "common_event_manager"
}
