# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The Cangjie API is in Beta. For details on its capabilities and limitations, please refer to the README file.

import("//build/ohos.gni")
import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.common_event_subscriber") {
  
  if (is_mingw || is_mac){
    sources = [ "../../mock/ohos.common_event_subscriber.cj" ]
  } else {
    sources = [
      "common_event_subscriber.cj",
      "common_event_subscriber_ffi.cj",
    ]
  }

  external_deps = [ "common_event_service:cj_common_event_manager_ffi" ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
  ]

  subsystem_name = "notification"
  part_name = "notification_cangjie_wrapper"
}
